[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Image_Assets/World/wasp_PNG14.png" type="Texture" id=1]
[ext_resource path="res://Wasp.gd" type="Script" id=2]
[ext_resource path="res://Important_Scenes/Reusable/Enemy.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 555, 317 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 24.5153

[sub_resource type="CircleShape2D" id=4]
radius = 312.17

[node name="Enemy" instance=ExtResource( 3 )]
collision_layer = 4
script = ExtResource( 2 )
acceleration = 50
max_speed = 100

[node name="AnimatedSprite" parent="." index="0"]
position = Vector2( 0, 1 )
scale = Vector2( 0.133784, 0.152208 )
frames = SubResource( 2 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 3 )

[node name="PlayerDetect" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect" index="0"]
shape = SubResource( 4 )

[node name="WanderTimer" type="Timer" parent="." index="7"]
process_mode = 0
wait_time = 0.5
one_shot = true

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_navigation_finished"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
